[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Datapacks/UI/CrotchCode/CrotchCodeEditor.gd" type="Script" id=1]
[ext_resource path="res://Game/Datapacks/UI/CrotchCode/CurrentCodeList.gd" type="Script" id=3]
[ext_resource path="res://Game/Datapacks/UI/CrotchCode/PossibleCodeBlocksList.gd" type="Script" id=4]

[node name="CrotchCodeEditor" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 638.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 638.0
margin_bottom = 14.0
text = "Code"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 638.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CurrentCodeList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 638.0
margin_bottom = 702.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 638.0
margin_bottom = 14.0
text = "Code blocks"

[node name="ScrollContainer2" type="ScrollContainer" parent="VBoxContainer2"]
margin_top = 18.0
margin_right = 638.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PossibleCodeBlocksList" type="VBoxContainer" parent="VBoxContainer2/ScrollContainer2"]
margin_right = 638.0
margin_bottom = 702.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
